Fix background-color on smaller screens

--- a/css/template-style.css
+++ b/css/template-style.css
@@ -241,7 +241,7 @@ form.customform input, form.customform select, form.customform textarea {
 }
 @media screen and (max-width: 768px) {
   body {
-  	background: none repeat scroll 0 0 rgb(0, 30, 34);
+  	background: none repeat scroll 0 0 rgb(255, 210, 210);
   }
   nav {
   	background: none repeat scroll 0 0 rgb(0, 30, 34);
